# specx

./: .Dockerfile  .clang-format  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE.txt  README.md  SpecxInfo.cmake
.github/workflows/: ci.yml
Batch/: MI210.batch  a100.batch  p100.batch  rtx8000.batch  run-benchs.sh  v100.batch
Batch/hip/: run-benchs-hip.sh
Benchmark/: CMakeLists.txt  clsimple.hpp  run-benchs.sh
Benchmark/Overhead/: CMakeLists.txt  overhead.cpp
Benchmark/axpy/: axpy.cpp
Benchmark/axpy_hip/: CMakeLists.txt  axpy_hip.cpp
Benchmark/batch/: a100.batch  p100.batch  rtx8000.batch  run-benchs.sh  v100.batch
Benchmark/cholesky_gemm/: CMakeLists.txt  CholeskyFunctionsWrapper.hpp  cholesky-mpi.cpp  cholesky.cpp  gemm-mpi.cpp  gemm.cpp
Benchmark/cholesky_gemm_hip/: CMakeLists.txt  CholeskyFunctionsWrapper.hpp  CholeskyFunctionsWrapper_hip.hpp  cholesky-mpi.cpp  cholesky-mpi_hip.cpp  cholesky.cpp  cholesky_hip.cpp  gemm-mpi.cpp  gemm-mpi_hip.cpp  gemm.cpp  gemm_hip.cpp
Benchmark/cholesky_hip/: CMakeLists.txt  cholesky_hip.cpp
Benchmark/circuit_placement/: CMakeLists.txt
Benchmark/graph_traversal/: CMakeLists.txt  bench_graph.cpp  levelgraph.hpp  lg_omp.hpp  lg_specx.hpp
Benchmark/machine_learning/: CMakeLists.txt
Benchmark/particles/: CMakeLists.txt  particles-simu-mpi.cpp  particles-simu.cpp
Benchmark/particles_hip/: particles-simu-mpi.cpp  particles-simu-mpi_hip.cpp  particles-simu.cpp  particles-simu_hip.cpp
CMakeModules/: SpecxInfo.cmake.in  SpetabaruInfo.cmake.in
Docs/Scripts/: dracomc.sh  dracoremc.sh
Examples/: CMakeLists.txt
Examples/Basic/: CMakeLists.txt  benchmark.cpp  daggraph.cpp  getting-started.cpp  maybe-write-model-2.cpp  maybe-write-model-2level.cpp  newmodel.cpp  potential-write-model-2.cpp  tasksinsertion.cpp  tempbuffer.cpp  tempheapbuffer.cpp  testdetach.cpp  tracegeneration.cpp
Examples/Cholesky/: CMakeLists.txt  Cholesky.cpp  CholeskyFunctionsWrapper.hpp
Examples/MC/: CMakeLists.txt  mc.cpp  mcCollide.cpp  mcglobal.hpp  remc.cpp  remcCollide.cpp
Examples/Slides/: CMakeLists.txt  examples.cpp
Src/: CMakeLists.txt  SPETABARUConfig.h.cmake
Src/Buffer/: SpBufferDataView.hpp  SpHeapBuffer.hpp
Src/Compute/: SpComputeEngine.cpp  SpComputeEngine.hpp  SpWorker.cpp  SpWorker.hpp  SpWorkerTeamBuilder.hpp  SpWorkerTypes.hpp
Src/Config/: SpConfig.hpp  SpConfig.hpp.cmake
Src/Cuda/: SpCudaMemManager.cpp  SpCudaMemManager.hpp  SpCudaUtils.cpp  SpCudaUtils.hpp  SpCudaWorkerData.hpp
Src/Data/: SpAbstractDeviceAllocator.hpp  SpAbstractDeviceMemManager.hpp  SpDataAccessMode.hpp  SpDataDuplicator.hpp  SpDataHandle.hpp  SpDependence.hpp  SpDeviceData.hpp
Src/Hip/: SpHipMemManager.cpp  SpHipMemManager.hpp  SpHipUtils.cpp  SpHipUtils.hpp  SpHipWorkerData.hpp
Src/Legacy/: SpRuntime.hpp
Src/MPI/: SpMPIUtils.hpp  SpMpiBackgroundWorker.cpp  SpMpiBackgroundWorker.hpp  SpMpiSerializer.hpp  SpMpiTypeUtils.hpp  SpMpiUtils.hpp  SpSerializer.hpp
Src/Output/: SpDotDag.hpp  SpSvgTrace.hpp
Src/Random/: SpMTGenerator.hpp  SpPhiloxGenerator.hpp
Src/Runtimes/: SpDependence.hpp  SpRuntime.hpp
Src/Scheduler/: SpAbstractScheduler.hpp  SpHeterogeneousPrioScheduler.hpp  SpMultiPrioScheduler.hpp  SpPrioScheduler.hpp  SpSimpleScheduler.hpp  SpStaticScheduler.hpp  SpTaskManager.hpp  SpTaskManagerListener.hpp
Src/Schedulers/: SpPrioScheduler.hpp  SpSchedulerInformer.hpp  SpSimpleScheduler.hpp  SpTasksManager.hpp
Src/Speculation/: SpSpecTaskGroup.hpp  SpSpecTaskGroupM2.hpp  SpSpeculativeModel.hpp
Src/Task/: SpAbstractTask.cpp  SpAbstractTask.hpp  SpPriority.hpp  SpProbability.hpp  SpTask.hpp
Src/TaskGraph/: SpAbstractTaskGraph.cpp  SpAbstractTaskGraph.hpp  SpTaskGraph.hpp
Src/Tasks/: SpAbstractTask.hpp  SpTask.hpp
Src/Utils/: MacOSX.hpp  SpAbstractBufferManager.hpp  SpAlignment.hpp  SpArrayAccessor.hpp  SpArrayBlock.hpp  SpArrayView.hpp  SpBlockTuple.hpp  SpBlockVector.hpp  SpBufferDataView.hpp  SpConsumerThread.hpp  SpDebug.cpp  SpDebug.hpp  SpDebugAssert.hpp  SpDeviceAllocator.hpp  SpGpuUnusedDataStore.hpp  SpHardware.hpp  SpHeapBuffer.hpp  SpMap.hpp  SpModes.hpp  SpPriority.hpp  SpProbability.hpp  SpSimpleTuple.hpp  SpTimePoint.hpp  SpTimer.hpp  SpUtils.cpp  SpUtils.hpp  SpVectorBlock.hpp  small_vector.hpp
UTests/: CMakeLists.txt  UTester.hpp  testArrayView.cpp  testAtomic.cpp  testCallableWrappers.cpp  testCommutativeWrite.cpp  testCommute.cpp  testComputeEngine.cpp  testConsumerThread.cpp  testInTask.cpp  testInsertion.cpp  testInsertionModel123.cpp  testInsertionModel3.cpp  testMap.cpp  testMaybeWrite.cpp  testMerge.cpp  testMethod.cpp  testModel2SpecTaskRequestsAccessToNonCopiedData.cpp  testNoCopyNoMove.cpp  testParallelWrite.cpp  testPartialMerge.cpp  testPotentialTasks.cpp  testPotentialWrite.cpp  testRace.cpp  testRandomGen.cpp  testRespect.cpp  testReturn.cpp  testSelectActivationLogic.cpp  testSelectActivationLogicModel1.cpp  testSelectActivationLogicModel2.cpp  testSimpleTest.cpp  testSimpleTestNoSpec.cpp  testTempBuffer.cpp  testTempHeapBuffer.cpp  testWeakPlusStrongDependency.cpp  testWindow.cpp
UTests/Cuda/: BlockTupleTest.cpp  CMakeLists.txt  SimpleGpuTest.cu
UTests/Gpu/: BlockTupleTest.cpp  CMakeLists.txt  SimpleGpuTest.cpp  SimpleGpuTest.cu
UTests/Hip/: CMakeLists.txt  SimpleGpuTest.cpp
UTests/MPI/: BroadcastMpiTest.cpp  CMakeLists.txt  Command.hpp  SimpleMpiTest.cpp  SimpleMpiTestWithSerialization.cpp  TestSerializeType.cpp  UTesterMpi.hpp  mpi_script.sh
UTests/ShouldNotCompile/: CMakeLists.txt  wrongPrototypeExtended.cpp  wrongPrototypeNoComp.cpp
